# instapydl

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  pyproject.toml  setup.py
docs/: Makefile  conf.py  example.ipynb  make.bat
instagram-dl/: __init__.py  add.py
instagram-dl/tests/: simple_example.py
instapydl/: __init__.py  src.py
instapydl/tests/: simple_example.py
src/instagram_dl/: __init__.py  instagram_dl.py
tests/: test_instagram_dl.py
